0.6.5/_sources/gallery/custom_key_bindings.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/custom_key_bindings.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_custom_key_bindings.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_custom_key_bindings.py:


Custom key bindings
===================

Display one 4-D image layer using the ``add_image`` API

.. tags:: gui

.. GENERATED FROM PYTHON SOURCE LINES 9-61



.. image-sg:: /gallery/images/sphx_glr_custom_key_bindings_001.png
   :alt: custom key bindings
   :srcset: /gallery/images/sphx_glr_custom_key_bindings_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    from skimage import data

    import napari

    blobs = data.binary_blobs(
        length=128, blob_size_fraction=0.05, n_dim=2, volume_fraction=0.25
    ).astype(float)

    viewer = napari.Viewer()
    layer = viewer.add_image(blobs, name='blobs')


    @viewer.bind_key('a')
    def accept_image(viewer):
        msg = 'this is a good image'
        viewer.status = msg
        print(msg)
        set_layer_data(viewer)


    @viewer.bind_key('r')
    def reject_image(viewer):
        msg = 'this is a bad image'
        viewer.status = msg
        print(msg)
        set_layer_data(viewer)


    def set_layer_data(viewer):
        blobs = data.binary_blobs(
            length=128, blob_size_fraction=0.05, n_dim=2, volume_fraction=0.25
        ).astype(float)
        viewer.layers[0].data = blobs


    @napari.Viewer.bind_key('w')
    def hello(viewer):
        # on press
        viewer.status = 'hello world!'

        yield

        # on release
        viewer.status = 'goodbye world :('


    # change viewer title
    viewer.title = 'quality control images'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_custom_key_bindings.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: custom_key_bindings.ipynb <custom_key_bindings.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: custom_key_bindings.py <custom_key_bindings.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: custom_key_bindings.zip <custom_key_bindings.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
